export const snapshot = {};

snapshot[`init without path mode: zsh 1`] = `
stdout:
'# Load fenv automatically by appending the following to
# ~/.zprofile (for login shells)
# and ~/.zshrc (for interactive shells) :

export FENV_ROOT="\$HOME/.fenv"
command -v fenv >/dev/null || export PATH="\$FENV_ROOT/bin:\$PATH"
eval "\$(fenv init -)"

# Restart your shell for the changes to take effect:

exec \$SHELL -l

'
stderr:
""
`;

snapshot[`init without path mode: bash 1`] = `
stdout:
'# Load fenv automatically by appending the following to
# ~/.bash_profile if it exists, otherwise ~/.profile (for login shells)
# and ~/.bashrc (for interactive shells) :

export FENV_ROOT="\$HOME/.fenv"
command -v fenv >/dev/null || export PATH="\$FENV_ROOT/bin:\$PATH"
eval "\$(fenv init -)"

# Restart your shell for the changes to take effect:

exec \$SHELL -l

'
stderr:
""
`;

snapshot[`init without path mode: fish 1`] = `
stdout:
"# Add fenv executable to PATH by running
# the following interactively:

set -Ux FENV_ROOT \$HOME/.fenv
fish_add_path \$FENV_ROOT/bin

# Load fenv automatically by appending
# the following to ~/.config/fish/conf.d/fenv.fish:

fenv init - | source

# Restart your shell for the changes to take effect:

exec \$SHELL -l

"
stderr:
""
`;

snapshot[`detectShell: zsh 1`] = `
stdout:
"FENV_SHELL_DETECT=zsh
"
stderr:
""
`;

snapshot[`detectShell: bash 1`] = `
stdout:
"FENV_SHELL_DETECT=bash
"
stderr:
""
`;

snapshot[`detectShell: fish 1`] = `
stdout:
"FENV_SHELL_DETECT=fish
"
stderr:
""
`;

snapshot[`detectShell: default shell 1`] = `
stdout:
"FENV_SHELL_DETECT=default
"
stderr:
""
`;

snapshot[`detectShell: empty shell 1`] = `
stdout:
"FENV_SHELL_DETECT=default
"
stderr:
""
`;

snapshot[`detectShell: unsupported os 1`] = `
stdout:
""
stderr:
"ERROR: Failed to detect the interactive shell
"
`;
